src/styles/App.css
/* src/App.css */

body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  background-color: #f4f4f9;
  color: #333;
  line-height: 1.5;
}

/* Header Styles */
.header {
  background-color: #333;
  color: #fff;
  padding: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header .logo {
  font-size: 1.5rem;
}

.logo a {
  color: #fff;
  text-decoration: none;
  transition: color 0.3s;
}

.header nav ul {
  list-style: none;
  display: flex;
  gap: 1rem;
}

.header nav ul li a {
  color: #fff;
  text-decoration: none;
  transition: color 0.3s;
}

.header nav ul li a:hover {
  color: #f4f4f9;
}

/* Section Styles */
.section {
  padding: 2rem;
  text-align: center;
}

.about,
.projects,
.contact,
.technologies {
  background-color: #dcdde0;
  margin: 1rem 0;
  padding: 2rem;
  border-radius: 8px;
}

/* Project and Technology List Styles */
.project-list,
.technology-list {
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.project-list {
  flex-wrap: wrap;
  width: 100%;
}

.project-card,
.technology-card {
  background-color: #fff;
  padding: 1rem;
  border-radius: 8px;
  width: 200px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.project-card a,
.technology-card a {
  text-decoration: none;
  color: #007bff;
}

.project-card a:hover,
.technology-card a:hover {
  text-decoration: none;
}

.project-card .icon {
  justify-content: center;
}

.project-card h3 {
  color: black;
}

.project-card p {
  color: gray;
}

.project-card img {
  max-width: 100%;
  max-height: 100px;
  height: auto;
}

/* Icon and Tooltip Styles */
.icon {
  position: relative;
  display: inline-block;
  font-size: 1.5rem;
  color: #333;
  transition: color 0.3s;
}

.icon:hover {
  color: #007bff;
}

.icon .tooltip {
  display: none;
  position: absolute;
  padding: 5px 10px;
  border-radius: 4px;
  font-size: 14px;
  color: gray;
  font-style: italic;
  left: 50%;
  transform: translateX(-50%);
  bottom: calc(-55% - 5px);
  white-space: nowrap;
}

.icon:hover .tooltip {
  display: block;
}

/* Contact Links Styles */
.contact-links {
  margin-top: 1rem;
}

.social-icons {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin-top: 0.5rem;
}

/* src/App.css */

/* ... other styles ... */

.post-container {
  max-width: 1200px;
  margin: 20px auto;
  padding: 20px;
  text-align: justify;
}

.content-wrapper {
  display: flex;
  transition: all 0.3s ease;
}

.post-content {
  flex-grow: 1;
  transition: max-width 0.3s ease;
  padding-right: 20px; /* Add padding to the right */
}

/* Table of Contents Styles */
.table-of-contents {
    margin-bottom: 20px;
    list-style: none;
    padding: 0;
}

.table-of-contents a {
  text-decoration: none;
}

.table-of-contents a:hover {
  text-decoration: underline;
}

.table-of-contents.non-sticky-toc {
  margin-top: 20px;
  margin-bottom: 20px;
}

.table-of-contents li details > summary {
  list-style: none;
  width: 100%;
  display: block;
  cursor: pointer;
}

.table-of-contents li details[open] > summary {
  list-style: none;
}

.table-of-contents li details[open] > summary::before {
  content: "▾";
  margin-right: 5px;
  display: inline-block;
}

.table-of-contents li details > summary::before {
  content: "▸";
  margin-right: 5px;
  display: inline-block;
}

.table-of-contents ul {
  width: max-content;
  padding-left: 20px;
}

/* Floating TOC Icon Styles */
.floating-toc-icon {
  position: fixed;
  bottom: 20px;
  left: 20px;
  width: 40px;
  height: 40px;
  background-color: #007bff;
  color: #fff;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  z-index: 1000;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.floating-toc-icon:hover {
  background-color: #0056b3;
}

/* TOC Modal Styles */
.toc-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.toc-modal-content {
  background-color: #fff;
  padding: 20px;
  border-radius: 5px;
  max-width: 80%;
  max-height: 80%;
  overflow-y: auto;
}

.close-modal {
  position: absolute;
  top: 10px;
  right: 10px;
  background: none;
  border: none;
  font-size: 20px;
  cursor: pointer;
}

/* Larger Screen Styles (Tablet and Desktop) */
@media (min-width: 768px) {
  .content-wrapper {
    justify-content: flex-start; /* Align content to the left */
  }

  .post-content {
    order: -1; /* Move the content to the left of the TOC */
    max-width: 80%;
    margin-left: 20px; /* Add margin to the left */
    margin-right: 20px;
  }

  .toc-wrapper {
    flex: 0 0 30%; /* TOC takes up 20% */
    max-width: 30%; /* Ensure TOC doesn't exceed 20% */
    position: sticky;
    top: 0;
    align-self: flex-start;
    overflow-y: auto;
    height: 100vh;
    padding-top: 20px;
  }

  .table-of-contents {
    width: 100%;
  }

  .table-of-contents ul {
    width: 100%; /* Ensure nested lists don't collapse */
    padding-left: 1rem; /* Adjust padding for nested lists */
  }

  .table-of-contents li {
    width: 100%; /* Ensure list items take full width of their container */
  }

  /* Remove margin from sticky-toc */
  .sticky-toc {
    margin-right: 0;
  }

  /* Hide the non-sticky TOC on desktop */
  .table-of-contents.non-sticky-toc {
    display: none;
  }

  /* Hide floating icon and modal on desktop */
  .floating-toc-icon,
  .toc-modal {
    display: none;
  }

  /* Remove width limitation for subsections on desktop */
  .table-of-contents li details > summary {
    width: auto;
  }
}

.preserve-newlines {
  white-space: pre-wrap;
}

